# Stub

./: .gitignore  Dockerfile  LICENSE  README.md  apllication.properties  main.py  pom.xml  pyproject.toml
src/main/java/com/example/newMock/: NewMockApplication.java
src/main/java/com/example/newMock/Controller/: KafkaConfigs.java  KafkaConsumerConfig.java  KafkaConsumerService.java  KafkaController.java  KafkaListenerMain.java  KafkaProducerConfig.java  KafkaProducerRunner.java  KafkaProducerService.java  KafkaSender.java  MainController.java  StringGenerator.java
src/main/java/com/example/newMock/Model/: RequestDTO.java  ResponseDTO.java
src/main/java/com/example/newMock/controller/: KafkaConsumerConfig.java  KafkaConsumerService.java  KafkaProducerConfig.java  KafkaProducerService.java  KafkaRest.java
src/main/java/com/example/newMock/model/: RequestDTO.java  ResponseDTO.java
src/main/resources/: application.properties
