[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Lukveil <e.deckdee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
confluent-kafka = "^2.5.0"
gunicorn = "^23.0.0"
setuptools = "67.4.0"
gevent = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
