[tool.poetry]
name = "fastapi-kafka-app"
version = "0.1.0"
description = ""
authors = ["Lukveil <e.deckdee@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_kafka_app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
confluent-kafka = "^2.5.0"
uvicorn = "^0.30.6"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
